fix: z-index problem of anchor

--- a/src/styles/templates/doc.scss
+++ b/src/styles/templates/doc.scss
@@ -100,6 +100,7 @@ $navbar-height-mobile: 4.25rem; // 68px
 
       padding-top: $navbar-height;
       margin-top: -$navbar-height;
+      z-index: 1;
 
       &:first-child {
         @include mobile {
@@ -108,6 +109,12 @@ $navbar-height-mobile: 4.25rem; // 68px
 
         margin-top: -$navbar-height !important;
       }
+    }
+
+    p,
+    ul {
+      position: relative;
+      z-index: 2;
     }
 
     a {
@@ -119,6 +126,10 @@ $navbar-height-mobile: 4.25rem; // 68px
         }
 
         top: $navbar-height;
+
+        &.before {
+          transform: translateX(-50%);
+        }
       }
     }
 
